# SynergonEngine

./: .clang-format  .gitignore  BUILD.md  CMakeLists.txt  README.md  synergon-format.bat  synergon-format.sh  vcpkg.json
Assets/Shaders/: Triangle.slang  Triangle.spv
Engine/: CMakeLists.txt
Engine/Include/Synergon/: Core.hpp  Engine.hpp  Gpu.hpp  Graphics.hpp
Engine/Include/Synergon/Gpu/: IDevice.hpp  IRenderPass.hpp
Engine/Include/Synergon/Graphics/: RenderGraph.hpp
Engine/Modules/: CMakeLists.txt
Engine/Modules/Core/: CMakeLists.txt
Engine/Modules/Core/Include/Synergon/Core/: Asserter.hpp  FileHelpers.hpp  Logger.hpp
Engine/Modules/Core/Source/: Asserter.cpp  FileHelpers.cpp  Logger.cpp
Engine/Modules/Gfx/: CMakeLists.txt
Engine/Modules/Gfx/Include/Synergon/Gfx/: IDevice.hpp
Engine/Modules/Gfx/Source/: IDevice.cpp
Engine/Modules/Gfx/Source/Dx12/: DxDevice.cpp  DxDevice.hpp
Engine/Modules/Gfx/Source/Vk/: VkDevice.cpp  VkDevice.hpp
Engine/Modules/Gfxr/: CMakeLists.txt
Engine/Modules/Gfxr/Include/Synergon/Gfxr/: RenderGraph.hpp  RenderPass.hpp
Engine/Modules/Rhi/: CMakeLists.txt
Engine/Modules/Rhi/Include/Synergon/Rhi/: Enums.hpp  IBuffer.hpp  IBufferView.hpp  ICommandAllocator.hpp  ICommandBuffer.hpp  ICommandQueue.hpp  IDevice.hpp  IDisplay.hpp  IFence.hpp  IPipeline.hpp  IPipelineLayout.hpp  ISampler.hpp  IShader.hpp  IShaderInputContainer.hpp  IShaderInputLayout.hpp  IShaderInputPool.hpp  ITexture.hpp  ITextureView.hpp
Engine/Modules/Rhi/Include/Synergon/Rhi/Descriptors/: BufferDescriptor.hpp  BufferViewDescriptor.hpp  CommandAllocatorDescriptor.hpp  CommandBufferDescriptor.hpp  CommandQueueDescriptor.hpp  DisplayDescriptor.hpp  FenceDescriptor.hpp  PipelineDescriptor.hpp  PipelineLayoutDescriptor.hpp  RenderingDescriptor.hpp  SamplerDescriptor.hpp  ShaderDescriptor.hpp  ShaderInputContainerDescriptor.hpp  ShaderInputLayoutDescriptor.hpp  ShaderInputPoolDescriptor.hpp  TextureDescriptor.hpp  TextureViewDescriptor.hpp
Engine/Modules/Rhi/Include/Synergon/Rhi/Factory/: DeviceFactory.hpp
Engine/Modules/Rhi/Source/: DeviceFactory.cpp
Engine/Modules/Rhi/Source/Dx12/: Dx12Buffer.hpp  Dx12CommandAllocator.hpp  Dx12CommandBuffer.hpp  Dx12CommandQueue.hpp  Dx12Device.cpp  Dx12Device.hpp  Dx12Display.hpp  Dx12Fence.hpp  Dx12Pipeline.hpp  Dx12PipelineLayout.hpp  Dx12Sampler.hpp  Dx12Shader.cpp  Dx12Shader.h  Dx12Shader.hpp  Dx12ShaderInputLayout.hpp  Dx12ShaderinputContainer.hpp  Dx12Texture.hpp  Dx12TextureView.hpp
Engine/Modules/Rhi/Source/Vk/: SVkBuffer.hpp  SVkCommandAllocator.hpp  SVkCommandBuffer.hpp  SVkCommandQueue.hpp  SVkDevice.cpp  SVkDevice.hpp  SVkDisplay.hpp  SVkFence.hpp  SVkPipeline.hpp  SVkPipelineLayout.hpp  SVkSampler.hpp  SVkShader.cpp  SVkShader.hpp  SVkShaderInputLayout.hpp  SVkShaderinputContainer.hpp  SVkTexture.hpp  SVkTextureView.hpp  VkBuffer.hpp  VkCommandAllocator.hpp  VkCommandBuffer.hpp  VkCommandQueue.hpp  VkDevice.cpp  VkDevice.hpp  VkDisplay.hpp  VkFence.hpp  VkPipeline.hpp  VkPipelineLayout.hpp  VkSampler.hpp  VkShader.cpp  VkShader.h  VkShader.hpp  VkShaderInputLayout.hpp  VkShaderinputContainer.hpp  VkTexture.hpp  VkTextureView.hpp
Engine/Modules/Rhi/Tests/: BufferTests.cpp  CMakeLists.txt  CommandAllocatorTests.cpp  CommandBufferTests.cpp  CommandQueueTests.cpp  DeviceTests.cpp  DisplayTests.cpp  FenceTests.cpp  PipelineLayoutTests.cpp  PipelineTests.cpp  RenderTest.cpp  SamplerTests.cpp  ShaderInputContainerTests.cpp  ShaderInputLayoutTests.cpp  ShaderInputPoolTests.cpp  ShaderTests.cpp  TestClasses.hpp  TestsMain.cpp  TextureTests.cpp  TextureViewTests.cpp
Engine/Modules/Rhi/Tests/Dx12/: FSimpleFrameLoop.cpp  UDx12Buffer.cpp  UDx12CommandAllocator.cpp  UDx12CommandBuffer.cpp  UDx12CommandQueue.cpp  UDx12Device.cpp  UDx12Display.cpp  UDx12Fence.cpp  UDx12Pipeline.cpp  UDx12PipelineLayout.cpp  UDx12Sampler.cpp  UDx12ShaderInputContainer.cpp  UDx12ShaderInputLayout.cpp  UDx12Texture.cpp  UDx12TextureView.cpp
Engine/Modules/Rhi/Tests/TestShaders/: Triangle.fs.dxil  Triangle.slang  Triangle.vs.dxil
Engine/Modules/Rpi/: CMakeLists.txt
Engine/Modules/Rpi/Include/Synergon/Rpi/: RenderGraph.hpp  RenderPass.hpp
Engine/Source/: Engine.cpp
Engine/Source/Core/: Asserter.cpp  Logger.cpp
Engine/Source/Gpu/: IDevice.cpp  IRenderPass.cpp
Engine/Source/Graphics/: RenderGraph.cpp
Modules/: CMakeLists.txt
Modules/Application/Include/Synergon/: Samples.hpp
Modules/Application/Source/: Main.cpp
Modules/Engine/: CMakeLists.txt
Modules/Engine/Include/Synergon/: Engine.hpp
Modules/Engine/Source/: Engine.cpp
Samples/: CMakeLists.txt
Samples/Include/Synergon/: Samples.hpp
Samples/Source/: Main.cpp  Samples.cpp
